[project]
name = "comfyui-mosaic-mask"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/okgo4/ComfyUI-Mosaic-Mask"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "okgo4"
DisplayName = "ComfyUI-Mosaic-Mask"
Icon = ""
